--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>Incentivizing Open-Source AI</p>
     </header>
     <main>
+        <img src="MOR_EM_512.png" alt="Morpheus Logo" style="width: 512px;">
         <section>
             <h2>About Morpheus</h2>
             <p>Morpheus is designed to incentivize the first open-source peer-to-peer network of personal general-purpose AI (smart agents).</p>
@@ -20,10 +21,14 @@
             <h2>Powered by MOR Token</h2>
             <p>The Morpheus network is powered by the MOR token, which rewards contributors who work together to build, maintain, and utilize the open-source decentralized AI infrastructure.</p>
         </section>
+         <section>
+            <h2>MORPHEUS.asia Website</h2>
+            <p>Morpheus is growing internationally. This Asian community website will cover localized content and country-specific meetup information. Stay tuned.</p>
+        </section>
+        
     </main>
     <footer>
-        <p>&copy; 2023 Morpheus. All rights reserved.</p>
+        <p>&copy; 2024 Morpheus. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
