--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p>Incentivizing Open-Source AI</p>
     </header>
     <main>
+<div class="text-center">
         <img src="MOR_EM_512.png" alt="Morpheus Logo" style="width: 512px;">
         <section>
             <h2>About Morpheus</h2>
@@ -25,7 +26,7 @@
             <h2>MORPHEUS.asia Website</h2>
             <p>Morpheus is growing internationally. This Asian community website will cover localized content and country-specific meetup information. Stay tuned.</p>
         </section>
-        
+</div> 
     </main>
     <footer>
         <p>&copy; 2024 Morpheus. All rights reserved.</p>
