--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <h2>MORPHEUS.asia Website</h2>
             <p>Morpheus is growing internationally. This Asian community website will cover localized content and country-specific meetup information. Stay tuned.</p>
         </section>
+             <section>
+                 <br>
+            <h2>MOR.ORG Main Project Website</h2>
+            <p>    <a href="https://mor.org" target="_blank">Go to MOR.ORG</a> - Read more here.</p>
+        </section>
 </div> 
     </main>
     <footer>
