--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Morpheus</h1>
+        <h1>Morpheus Asia</h1>
         <p>Incentivizing Open-Source AI</p>
     </header>
     <main>
