--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morpheus - Incentivizing Open-Source AI</title>
+    <title>Morpheus | Open-Source AI with Blockchain and Fair-Launch Tokenomics</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
