--- a/index.html
+++ b/index.html
@@ -1,41 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morpheus | Open-Source AI with Blockchain and Fair-Launch Tokenomics</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Morpheus Asia</h1>
-        <p>Incentivizing Open-Source AI</p>
-    </header>
-    <main>
-<div class="text-center">
-        <img src="MOR_EM_512.png" alt="Morpheus Logo" style="width: 512px;">
-        <section>
-            <h2>About Morpheus</h2>
-            <p>Morpheus is designed to incentivize the first open-source peer-to-peer network of personal general-purpose AI (smart agents).</p>
-        </section>
-        <section>
-            <h2>Powered by MOR Token</h2>
-            <p>The Morpheus network is powered by the MOR token, which rewards contributors who work together to build, maintain, and utilize the open-source decentralized AI infrastructure.</p>
-        </section>
-         <section>
-            <h2>MORPHEUS.asia Website</h2>
-            <p>Morpheus is growing internationally. This Asian community website will cover localized content and country-specific meetup information. Stay tuned.</p>
-        </section>
-             <section>
-                 <br>
-            <h2>MOR.ORG Main Project Website</h2>
-            <p>    <a href="https://mor.org" target="_blank">Go to MOR.ORG</a> - Read more here.</p>
-        </section>
-</div> 
-    </main>
+  <head>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Morpheus | Open-Source AI with Blockchain and Fair-Launch Tokenomics
+    </title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://widgets.coingecko.com/gecko-coin-price-chart-widget.js"></script>
+  </head>
+  <body>
+    <div
+      class="bg-[#03170f] text-white flex justify-center flex-col items-center h-full gap-14 py-5"
+    >
+      <div class="flex flex-col gap-8 text-center pt-3">
+        <header class="flex flex-col gap-3">
+          <div class="relative">
+            <h1 class="text-5xl font-bold">Morpheus Asia</h1>
+            <button
+              class="rounded-full bg-[#4a5061] px-4 h-6 absolute top-[15px] right-[-38px]"
+            >
+              <p class="text-xs font-bold">Coming soon</p>
+            </button>
+          </div>
+          <p class="text-xl">Incentivizing Open-Source AI</p>
+        </header>
+        <img
+          src="MOR_EM_512.png"
+          alt="Morpheus Logo"
+          style="width: 512px"
+          class="floating-img"
+        />
+        <div class="mt-8">
+          <button
+            class="bg-[#1EDC8D] px-12 py-3 rounded-sm text-[#03170f] cursor-pointer hover:bg-[#25cb87]"
+          >
+            <a href="https://mor.org/"> Go to MOR.org </a>
+          </button>
+        </div>
+      </div>
+      <div class="container grid grid-cols-4 gap-6">
+        <div
+          class="border-2 border-[#1fdb8d] rounded-md p-6 flex flex-col gap-3"
+        >
+          <h2 class="text-xl font-bold">About Morpheus</h2>
+          <p>
+            Morpheus is designed to incentivize the first open-source
+            peer-to-peer network of personal general-purpose AI (smart agents).
+          </p>
+        </div>
+        <div
+          class="border-2 border-[#1fdb8d] rounded-md p-6 flex flex-col gap-3"
+        >
+          <h2 class="text-xl font-bold">Powered by MOR Token</h2>
+          <p>
+            The Morpheus network is powered by the MOR token, which rewards
+            contributors who work together to build, maintain, and utilize the
+            open-source decentralized AI infrastructure.
+          </p>
+        </div>
+        <div
+          class="border-2 border-[#1fdb8d] rounded-md p-6 flex flex-col gap-3"
+        >
+          <h2 class="text-xl font-bold">MORPHEUS.asia Website</h2>
+          <p>
+            Morpheus is growing internationally. This Asian community website
+            will cover localized content and country-specific meetup
+            information. Stay tuned.
+          </p>
+        </div>
+        <div
+          class="border-2 border-[#1fdb8d] rounded-md p-6 flex flex-col gap-3"
+        >
+          <h2 class="text-xl font-bold">MOR.ORG Main Project Website</h2>
+          <p>
+            <a href="https://mor.org" target="_blank">Go to MOR.ORG</a> - Read
+            more here.
+          </p>
+        </div>
+      </div>
+      <div class="flex flex-col container gap-6 pb-6">
+        <h1 class="text-4xl font-bold">24 Hours Price Chart</h1>
+        <div class="w-full">
+          <gecko-coin-price-chart-widget
+            locale="en"
+            dark-mode="true"
+            outlined="true"
+            coin-id="morpheusai"
+            initial-currency="usd"
+          ></gecko-coin-price-chart-widget>
+        </div>
+      </div>
+      <div class="container"></div>
+    </div>
     <footer>
-        <p>&copy; 2024 Morpheus. All rights reserved.</p>
+      <p>&copy; 2024 Morpheus. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 </html>
