--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       content="Morpheus is designed to incentivize the first open-source peer-to-peer network of personal general-purpose AI (smart agents)."
     />
     <meta property="og:image" content="https://morpheus.asia/MOR_EM_512.png" />
+    <meta property="og:logo" content="https://morpheus.asia/MOR_EM_512.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
