--- a/index.html
+++ b/index.html
@@ -135,23 +135,21 @@
             Staking with <span class="text-highlight">Morpheus.asia</span> will
             include you in the group of early contributors to the
             <span class="text-highlight">Morpheus.asia</span> community.
-            Community token launch with added features coming soon! Stay tuned,
-            only for <span class="text-highlight">Morpheus.asia</span> referred
-            stakers!
+            Community token launch with exciting features coming soon. Stay tuned!
           </p>
           <p class="text-lg break-word">
-            (Nov/2024 $-equivalent yield &gt; 12.5% p.a., whereas simple ETH
+            (Nov/2024 $-equivalent yield &gt; 12.5% p.a., whereby basic ETH
             staking would yield you &lt; 4% p.a.)
           </p>
 
           <p class="text-lg break-word">
-            Make sure to use the offical
+            Ensure you use the offical
             <span class="text-highlight">Morpheus.asia</span> referral address
             <span class="text-highlight underline underline-offset-2"
               >0xf3199e9E17c703fC8f6b226d5a3Ad25c5588a370</span
             >
-            upon staking. Only stakers using that referral address whitelisted
-            to receive the community token in 2025.
+            upon staking. Only users using that referral address are whitelisted
+            to receive our community token in 2025.
           </p>
 
           <a
@@ -237,7 +235,7 @@
           >[click to reveal]</span
         >
       </p>
-      <p>&copy; 2024 Morpheus. All rights reserved.</p>
+      <p>&copy; 2024. We are Morpheus. All rights reserved.</p>
     </footer>
     <script>
       const user = "rene";
