--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <p>
             Try out
             <a
-              href="https://venice.ai"
+              href="https://venice.ai/chat?ref=uzSlSH"
               target="_blank"
               class="text-[#21db8e] cursor-pointer"
             >
