--- a/index.html
+++ b/index.html
@@ -140,8 +140,20 @@
             stakers!
           </p>
           <p class="text-lg break-word">
-            (Nov/2024 $-equivalent yield &gt; 12.5% p.a., whereas simple ETH
-            staking would yield you &lt; 4% p.a.)
+            <b>No impermanent loss</b> – keep your full stake intact
+          </p>
+          <p class="text-lg break-word">
+            <b>Instant stETH deposits & withdrawals</b> – no waiting, just
+            earning
+          </p>
+          <p class="text-lg break-word">
+            <b>Up to 90% APR</b> – serious rewards for serious staking
+          </p>
+          <p class="text-lg break-word">
+            <b>Impeccable security</b> – your assets, protected
+          </p>
+          <p class="text-lg break-word">
+            <b>Referral program</b> – earn extra while sharing the benefits
           </p>
 
           <p class="text-lg break-word">
