--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </p>
 
           <p class="text-lg break-word">
-            Ensure you use the offical
+            Ensure you use the official
             <span class="text-highlight">Morpheus.asia</span> referral address
             <span class="text-highlight underline underline-offset-2"
               >0xf3199e9E17c703fC8f6b226d5a3Ad25c5588a370</span
